# guided-conversation-demo

./: .env.example  .gitignore  LICENSE  README.md  complex_form_dynamic.tac  complex_form_static.tac  guided_form.tac  guided_form.tac.yml  pyproject.toml  support_flow_both.tac  support_flow_dynamic.tac  support_flow_elicitation_guided.tac  support_flow_elicitation_guided_strict.tac  support_flow_elicitation_guided_trichotomy.tac  support_flow_elicitation_nested.tac  support_flow_elicitation_unguided.tac  support_flow_elicitation_unguided_auto.tac  support_flow_llm.tac  support_flow_orchestrated_loose.tac  support_flow_orchestrated_rigid.tac  support_flow_programmatic.tac  support_flow_scripted_baseline.tac  support_flow_static.tac
docs/paper/: .gitignore  README.md  main.tex
docs/paper/diagrams/: control_policy.dot  control_policy.tex  coverage_matrix.tex  exp2_orchestrators.tex  outcomes.dot  outcomes.tex  procedure_turn.dot  prompt_assembly.dot  reliability_harness.dot  simulator_modes.tex  styles.tex  three_architectures.tex  tool_internals_llm_planner.tex  tool_internals_orchestrator.dot  tool_internals_orchestrator.tex  tool_internals_script.dot  tool_internals_script.tex  tool_internals_soft_script.tex  tool_internals_state_machine.dot  tool_internals_state_machine.tex
docs/paper/diagrams/charts/: exp1_outcomes.tex  exp1_strict.tex  exp1_turns.tex  exp2_outcomes.tex  exp2_summary.tex
docs/paper/diagrams/data/: exp1_outcomes.csv  exp1_strict.csv  exp1_turns.csv  exp2_outcomes.csv  exp2_summary.csv
scripts/: build_paper.py  compare_reliability.py  debug_one_run.py  export_chart_data.py  extract_paper_tables.py
tests/: __init__.py  conftest.py  llm_hitl_handler.py  personas.py  support_costs.py  support_flow_verifier.py  support_orchestrated_reliability_comparison_summary.json  support_personas.py  test_complex_form_ab_parity.py  test_complex_form_reliability.py  test_durable_resume.py  test_guided_form_harness.py  test_guided_strict_reliability.py  test_guided_trichotomy_reliability.py  test_llm_hitl_noise.py  test_nested_reliability.py  test_scripted_baseline_reliability.py  test_support_costs.py  test_support_elicitation_reliability.py  test_support_flow_ab_parity.py  test_support_flow_reliability.py  test_support_flow_verifier.py  test_support_orchestrated_reliability.py  test_unguided_auto_reliability.py
