[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "guided-conversation-demo"
version = "0.1.0"
description = "Tactus demo: guided forms, support flows, static vs dynamic prompt A/B, CLI HITL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tactus==0.46.3",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.0",
  "pyyaml",
  "python-dotenv>=1.0.0",
  "openai>=1.0",
]
docs = [
  "watchdog>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: real LLM calls (requires OPENAI_API_KEY)",
  "support_elicitation_reliability: elicitation-style support flow experiment (expensive)",
  "support_orchestrated_reliability: orchestrator-mediated support flow experiment under impatient users (expensive)",
  "support_scripted_baseline_reliability: deterministic scripted baseline arm C (no LLM in agent path; expensive on non_ideal)",
]
testpaths = ["tests"]
